--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     margin: 0 auto;
     margin-top: -10px;
     margin-bottom: -16px;
+    position: relative;
 }
 .app_header{
     display: flex;
@@ -427,6 +428,60 @@
     background-color: rgba(194, 0, 0, 0.89);
     
 }
+.methodSupport{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    width: 22%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(126, 255, 255);
+    opacity: 0.8;
+    border-radius: 4px;
+    z-index: 2;
+    font-size: 30px;
+    margin: 0 auto;
+    transform-origin: top right;
+    animation: Growth ease-in 0.2s;
+    display: none;
+}
+.methodSupport button{
+    width: 250px;
+    height: 6rem;
+    font-size: 3.2rem;
+    background-color: cornsilk;
+    border-radius: 10px;
+    margin: 3rem 0;
+    
+
+}
+.methodSupport .fa-facebook-messenger{
+    color: blue;
+}
+.methodSupport .fa-phone-alt{
+    color: rgb(255, 84, 32);
+}
+
+.methodSupport .call_phone button:hover,.methodSupport .messenger button:hover{
+    background-color: rgb(56, 255, 72);
+    transition: 0.4s;
+    font-size: 3.4rem;
+
+}
+
+
+
+@keyframes Growth{
+    from{
+        transform:  scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
 /* support_help */
 .support_help{
     width: 100%;
@@ -441,55 +496,59 @@
     width: 80%;
     
 }
-.support_form-user--info{
-    width: 25%;
-}
-.support_form-name,.support_form-title{
-    height: 100px;
-}
-.support_form{
-    width: 80%;
-    font-size: 1.4rem;
-    margin: 4rem auto;
-}
-.support_form form{
+
+/* form */
+.form-2{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    margin-top: 3rem;
 }
-.form_name, .form_email{
-    margin-top: 1.5rem;
-    margin-bottom: 2rem;
-    width: 120%;
-    height: 3rem;
-    margin-left: 1rem;
-
+.support_form-user--info{
+    width: 20%;
+    margin-right: 4rem;
+}
+.form-group{
+    display: flex;
+    flex-direction: column;
+}
+.form-label{
+    font-size: 1.5rem;
+    margin: 1rem 0;
+}
+.form-group input{
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+}
+.form-message{
+    font-size: 12px;
+    margin-top: 4px;
+}
+.invalid>.form-control{
+    border-color: rgb(255, 79, 79);
+}
+.invalid>.form-message{
+    color: rgb(255, 79, 79);
+}
+.form-control{
+    padding-left: 8px;
+    font-size: 1.6rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
 }
 
-.form_title{
-    margin-top: 1.5rem;
-    margin-bottom: 2rem;
+.support_form-sumit button{
     width: 100%;
-    height: 4rem;
-    padding-left: 0.5rem;
-
-
-}
-.form_content{
-    margin-top: 1.5rem;
-    margin-bottom: 2rem;
-    width: 100%;
-    height: 8rem;
-    padding-left: 0.5rem;
-}
-.support_form-sumit input{
-    width: 70%;
     height: 3rem;
     font-size: 1.6rem;
     background-color: rgb(221, 127, 127);
     border: none;
     border-radius: 2px;
+    margin-top: 5rem;
 }
-.support_form-sumit input:hover{
+.support_form-sumit button:hover{
     opacity: 0.8;
     background-color: rgb(0, 173, 216);
     color: var(--white-color);
@@ -518,7 +577,9 @@
 .contact_item{
     margin: 1.4rem 0;
 }
-
+.contact_item>a{
+    color: #000;
+}
 .contact_icon{
     font-size: 2rem;
     margin-right: 0.5rem;
@@ -537,4 +598,26 @@
 .space_symbol{
     display: inline-block;
     width: 1%;
+}
+.gototop{
+    position: fixed;
+    z-index: 2;
+    bottom: 20px;
+    right: 20px;
+    font-size: 30px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid #000;
+    border-radius: 50%;
+    padding: 12px;
+    background-color: rgb(255, 145, 0);
+    
+}
+.gototop:hover{
+    bottom: 24px;
+
+}
+.gototop i{
+    margin: 8px auto;
 }
