--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -234,12 +234,17 @@
         width: 8%;
         
     }
+    .contact_icon{
+       
+        margin-right: 0.5rem;
+        width: 1.6rem;
+    }
     .form-2{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-bottom: 80px;
+        /* margin-bottom: 80px; */
     }
     .support_form-user--info{
         width: 50%;
@@ -257,9 +262,12 @@
         font-size: 12px;
         margin-top: 4px;
     }
+    .form-label {
+        margin: 1.5rem 0;
+    }
     .support_form-sumit{
         position: absolute;
-        bottom: 360px;
+        bottom: 290px;
         width: 50%;
     }
     .support_form-message {
