--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -235,8 +235,7 @@
         
     }
     .contact_icon{
-       
-        margin-right: 0.5rem;
+        font-size: 1.8rem;
         width: 2rem;
     }
     .form-2{
