--- a/css/base.css
+++ b/css/base.css
@@ -30,8 +30,9 @@ a{
     color: var(--white-color);
     border: none;
     border-radius: 2px;
-    height: 2.5rem;
-    width: 6rem;
+    height: 3rem;
+    width: 90%;
+    font-size: 1.8rem;
 }
 .btn:hover{
     color: var(--primary-color);
