--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@
     color: rgb(216, 134, 27);
     text-shadow: 6px 6px 5px rgba(255, 195, 30, 0.6),  3px 3px 4px rgba(255, 195, 30, 0.6);
 
-    border-bottom: dotted 4px #aaa;
+    /* border-bottom: dotted 4px #aaa; */
 }
 .event-section_des--place p{
     font-size: 4rem;
@@ -583,7 +583,7 @@
     background-color: rgb(221, 127, 127);
     border: none;
     border-radius: 2px;
-    margin-top: 5rem;
+    margin-top: 3rem;
 }
 .support_form-sumit button:hover{
     opacity: 0.8;
