--- a/css/style.css
+++ b/css/style.css
@@ -463,9 +463,16 @@
     line-height: 2rem;
 }
 .buy-product_btn{
-    width: 10rem;
-    font-size: 1.5rem;
-    background-color: rgba(194, 0, 0, 0.89);
+    width: 15rem;
+    font-size: 1.6rem;
+    background-color: rgb(221, 127, 127);
+    color: black;
+
+    
+}
+.buy-product_btn:hover{
+    background-color: rgb(0, 173, 216);
+    color: var(--white-color);
     
 }
 .methodSupport{
