--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -7,6 +7,9 @@
     .app_header .header_heading{
         margin-left: -12rem;
     }
+    marquee{
+        behavior: inherit;
+    }
     
     .tour_event-section{
         
@@ -81,7 +84,7 @@
     .contact_text{
         /* display: unset; */
         font-size: 2.5rem;
-        width: 10%;
+        width: 12%;
         
     }
     .class-object {
@@ -258,7 +261,7 @@
     .contact_text{
         /* display: unset; */
         font-size: 2.5rem;
-        width: 10%;
+        width: 12%;
         
     }
     .contact_icon{
