--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -126,6 +126,8 @@
         top: 400px;
         left: 20px;
         transform-origin: center;
+        animation: none;
+
 
     }
     .methodSupport button{
@@ -190,7 +192,7 @@
         
     }
     .methodSupport {
-        
+        display: flex;
         width: 18%;
         height: 100%;
         right: 7px;
@@ -305,6 +307,8 @@
         top: 500px;
         left: 20px;
         transform-origin: center;
+        animation: none;
+
 
     }
     .methodSupport button{
