--- a/css/style.css
+++ b/css/style.css
@@ -633,6 +633,8 @@
     border-bottom: 2px solid #ccc;
 }
 .contact_menu{
+    display: flex;
+    flex-direction: column;
     font-size: 1.8rem;
     width: 95%;
     margin-left: 5%;
@@ -640,6 +642,7 @@
     
 }
 .contact_item{
+    display: flex;
     margin: 1.4rem 0;
 }
 .contact_item>a{
@@ -654,7 +657,6 @@
 
 .contact_text{
     
-    display: inline-flex;
     width: 6%;
 }
 
