--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -85,9 +85,7 @@
     }
     
     .contact_text{
-        /* display: unset; */
-        font-size: 2.4rem;
-        width: 12%;
+        width: 8%;
         
     }
     .class-object {
@@ -137,6 +135,15 @@
         
         
     
+    }
+    .closeMethorSupport{
+        top: 10px;
+        right: 10px;
+    }
+    .btn_close{
+        color: red;
+        font-size: 5rem;
+        padding: 6px;
     }
     .form-label{
         margin: 2rem 0;
@@ -279,9 +286,7 @@
         font-size: 1.4rem;
     }
     .contact_text{
-        /* display: unset; */
-        font-size: 2.4rem;
-        width: 12%;
+        width: 8%;
         
     }
     .contact_icon{
@@ -326,7 +331,7 @@
         /* background-color: red; */
         color: red;
         font-size: 5rem;
-        padding: 4px;
+        padding: 6px;
     }
     .form-label{
         margin: 1.5rem 0;
