--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -81,11 +81,15 @@
         line-height: 2rem;
     }
     .contact_menu{
-        font-size: 1.6rem;
+        font-size: 2rem;
     }
     
     .contact_text{
-        width: 8%;
+        width: 10%;
+        
+    }
+    .contact_icon{
+        width: 3%;
         
     }
     .class-object {
@@ -283,15 +287,15 @@
         
     }
     .contact_menu{
-        font-size: 1.4rem;
+        font-size: 2rem;
     }
     .contact_text{
-        width: 8%;
+        width: 12%;
         
     }
     .contact_icon{
         font-size: 2rem;
-        width: 2rem;
+        width: 3%;
     }
     .form-2{
         display: flex;
