--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -40,7 +40,7 @@
         width: 80%;
         height: 50%;
         top: 400px;
-        /* left: 20px; */
+        left: 18px;
         transform-origin: center;
 
 
@@ -290,6 +290,8 @@
         width: 80%;
         height: 50%;
         top: 500px;
+        left: 18px;
+
         /* left: 20px; */
         transform-origin: center;
 
@@ -350,6 +352,7 @@
         width: 80%;
         height: 65%;
         top: 120px;
+        left: 18px;
 
 
     }
