--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -20,11 +20,11 @@
         margin-left: 2rem;
         
     }
-    .header_saying {
+    /* .header_saying {
         margin-left: -10%;
         width: 500px;
         
-    }
+    } */
     .class-object {
         height: 6.6rem;
     }
@@ -176,12 +176,12 @@
     .app_header .header_heading {
         margin-left: -12%;
     }
-    .header_saying {
+    /* .header_saying {
         
         margin-left: -20%;
         width: 600px;
         
-    }
+    } */
     .slide_content{
         top: 25%;
     }
