--- a/css/style.css
+++ b/css/style.css
@@ -77,29 +77,29 @@
 }
 
 .app_navbar .menu_item{
-    margin: 0 1.8rem;
+    margin: 0 2rem;
 }
 .menu_item{
     padding: 0.5rem;
-    border-radius: 8px;
     
 }
-.menu_item-link:hover{
-    
-    color: black;
-    font-style: italic;
-    transition: 1s;
-}
+
 .menu_item-link{
-    padding: 2rem 1rem;
+    padding: 0.5rem 1rem;
     border-radius: 8px;
+    font-weight: 600;
 
 }
-.menu_item-link--active{
+.menu_item-link--active, .menu_item-link:hover{
     background-color: var(--primary-color);
+    transition: 0.5s;
+    border-bottom: rgb(26, 25, 25) solid 1px;
     
     
 }
+/* .menu_item-link--active{
+    display: flex;
+} */
 
 /* Begin slide-show */
 
